<resources>
    <string name="app_name">SmartExpress</string>
    <string name="msg_loading">Xin chờ...</string>
    <string name="network_error">Không thể kết nối, vui lòng kiểm tra kết nối mạng của bạn.</string>
    <string name="newtwork_error_button_retry">Thử lại</string>
    <string name="newtwork_error_button_exit">Thoát</string>
    <string name="empty_user_pass">Username and password can not be empty</string>
    <string name="wrong_user_pass">Wrong username or password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password_hint">Password</string>
    <string name="location_request">Sử dụng vị trí của bạn và cho phép nhận thông báo</string>
    <string name="location_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="welcome_winwin">Welcome to SmartExpress</string>
    <string name="please_enter_phone">Vui lòng nhập số điện thoại của bạn</string>
    <string name="welcome_button_continue">Tiếp tục</string>
    <string name="your_phone_number">Số điện thoại của bạn</string>
    <string name="otp">OTP</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="new_password_subtext">Sử dụng mật khẩu để bảo vệ tài khoản và đăng nhập lại nhanh chóng</string>
    <string name="show_new_password">Hiện mật khẩu</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_favorite">Yêu thích</string>
    <string name="title_activity">Hoạt động</string>
    <string name="title_account">Tài khoản</string>
    <string name="hello_account">Hello, Nguyen</string>
    <string name="winwin_hello">WinWin xin chào</string>
    <string name="search_hint">Tìm kiếm trên ứng dụng</string>
    <string name="propose">Đề xuất cho bạn</string>
    <string name="show_all">Xem tất cả</string>
    <string name="popular_food">Phổ biến</string>
    <string name="rating_star_value">4.9</string>
    <string name="food_price">30.000đ - 50.000đ</string>
    <string name="kilomet_value">2.0 km</string>
    <string name="storedLocation_feature">Địa chỉ đã lưu</string>
    <string name="payment_feature">Thanh toán</string>
    <string name="info_feature">Thông tin</string>
    <string name="lang_feature">Ngôn ngữ</string>
    <string name="where_go">Chào Nguyen, bạn muốn đi đâu?</string>
    <string name="where_want_go">Bạn muốn đi đâu?</string>
    <string name="home_private">Nhà riêng</string>
    <string name="company">Công ty</string>
    <string name="send_otp_title1">Mã xác thực sẽ được gửi đến </string>
    <string name="send_otp_title2">Vui lòng kiểm tra điện thoại và nhập mã xác thực vào đây </string>
    <string name="send_otp_title3">Gửi lại mã xác thực</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="fullName">Họ và tên</string>
    <string name="fullName_hint">Nhập họ và tên</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="update">Cập nhật</string>
    <string name="login_title">Đăng nhập</string>
    <string name="login_subtitle">Nhập mật khẩu để đăng nhập vào tài khoản</string>
    <string name="forget_pw">Quên mật khẩu</string>
    <string name="signup">Đăng ký</string>
    <string name="book_car">Đặt WinBike</string>
    <string name="endow">Ưu đãi</string>
    <string name="note_text">Ghi chú</string>
    <string name="money">Tiền mặt</string>
    <string name="payment_method_order">Phương thức thanh toán khác</string>
    <string name="note_driver">Ghi chú cho tài xế</string>
    <string name="done">Xong</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="note">Ghi chú</string>
    <string name="card_credit">Thẻ tín dụng/Thẻ ghi nợ</string>
    <string name="price_book_win">100.000</string>
    <string name="bottom_sheet">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottom_sheet_small">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="required_star">*</string>
    <string name="coupon_title">Mã ưu đãi</string>
    <string name="coupon_text">Giảm</string>
    <string name="vn_currency">VND</string>
    <string name="coupon_subtext">Cước phí chỉ</string>
    <string name="coupon_expiry"> Hạn sử dụng: </string>
    <string name="coupon_currency_tag">k</string>
    <string name="coupon_use_text">Dùng ngay</string>
    <string name="search_destination_title">Chọn điểm đến</string>
    <string name="search_destination_subtitle">Địa chỉ giao hàng</string>
    <string name="search_origin_subtitle">Địa chỉ nhận hàng</string>
    <string name="search_destination_hint">Nhập điểm giao đến ...</string>
    <string name="search_destination_save">Địa điểm đã lưu</string>
    <string name="search_destination_add">Thêm địa chỉ</string>
    <string name="trip_information">Thông tin đơn hàng</string>
    <string name="driver_name">Lý Tiểu Long</string>
    <string name="bike_brand">Honda SH Model</string>
    <string name="vehicle_code">59-S2 57301</string>
    <string name="send_message">Nhắn tin</string>
    <string name="call_driver">Gọi tài xế</string>
    <string name="payment">Thanh toán</string>
    <string name="fee">Cước phí</string>
    <string name="price_trip">50.000đ</string>
    <string name="discount">Khuyến mãi</string>
    <string name="discount_price">0đ</string>
    <string name="payment_cash">Thanh toán tiền mặt</string>
    <string name="order_code">Mã đơn hàng:</string>
    <string name="code_trip">73570</string>
    <string name="order_time">25/09/2023 15:00</string>
    <string name="location_text">150/17 Đinh Tiên Hoàng, Phường 26, Quận 3</string>
    <string name="trip_cancel">Hủy chuyến</string>
    <string name="location_km">Điểm đón 4.0 km</string>
    <string name="rating_title">Đánh giá</string>
    <string name="rating_subtitle">Bạn đánh giá tài xế như thế nào</string>
    <string name="rating_comment">Thêm nhận xét của bạn</string>
    <string name="rating_comment_ex1">An toàn</string>
    <string name="rating_comment_ex2">Hữu ích</string>
    <string name="rating_comment_ex3">Phương tiện sạch sẽ</string>
    <string name="send">Gửi</string>
    <string name="next">Tiếp tục</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="total">Tổng tiền:</string>
    <string name="sold">đã bán</string>
    <string name="comment">đánh giá</string>
    <string name="required">Bắt buộc</string>
    <string name="store_name">Boba Tea</string>
    <string name="store_location">21 Ung Văn Khiêm, Q.Bình Thạnh</string>
    <string name="drinks">Đồ uống</string>
    <string name="fast_food">Fast Food</string>
    <string name="free_shipping">Miễn phí vận chuyển</string>
    <string name="rate_count">(10 đánh giá)</string>
    <string name="promotion">Khuyến mãi</string>
    <string name="for_you">Dành cho bạn</string>
    <string name="payment_now">Thanh toán ngay</string>
    <string name="cart_header">Giỏ hàng</string>
    <string name="drinka_address">Trà sữa Bubble Tea, Ung Văn Khiêm</string>
    <string name="confirm">Xác nhận</string>
    <string name="trip_from">Đơn hàng gửi từ</string>
    <string name="location_from">150/17 Đinh Tiên Hoàng, Phường 26, Quận 3, TP.HCM</string>
    <string name="location_to">Masteri Thảo Điền, P2, Q2, Tphcm</string>
    <string name="completed">Hoàn thành</string>
    <string name="order_price">80.000đ</string>
    <string name="shopping">Đi chợ</string>
    <string name="delivery">Giao hàng</string>
    <string name="book_win">Đặt xe</string>
    <string name="order_completed">Đã hoàn thành</string>
    <string name="order_note">Nhiều đá, ít sữa</string>
    <string name="order_phone">(0274943567)</string>
    <string name="order_customer">Tran Nguyen</string>
    <string name="order_address">Địa chỉ nhận hàng</string>
    <string name="order_details">Chi tiết đơn hàng</string>
    <string name="order_food">Trà sữa truyền thống size L + trân châu đen</string>
    <string name="order_count">X2</string>
    <string name="finding_driver_title">Đang tìm tài xế cho bạn</string>
    <string name="finding_driver_subtitle">Chuyến đi sẽ sớm bắt đầu</string>
    <string name="found_driver_title">Tài xế sẽ đến đón bạn trong</string>
    <string name="cancel">Hủy</string>
    <string name="purchase">Mua hàng</string>
    <string name="enter_shipping_address">Nhập địa chỉ ...</string>
    <string name="order_information">Thông tin đơn hàng</string>
    <string name="style_item">Loại hàng hóa</string>
    <string name="bonus_service">Dịch vụ bổ sung</string>
    <string name="receiver_information">Thông tin người nhận</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="small">Nhỏ</string>
    <string name="add_information">Thêm thông tin người nhận</string>
    <string name="medium">Trung Bình</string>
    <string name="big">Lớn</string>
    <string name="cod">Thu tiền hộ (COD)</string>
    <string name="hand_delivery">Giao hàng tận tay</string>
    <string name="name_phone">Nguyen (0232359834)</string>
    <string name="item_size">Kích thước món hàng</string>
    <string name="address_delivery">Bạn muốn giao đến</string>
    <string name="delivery_checkbox">Người nhận trả phí giao hàng</string>
    <string name="time_setup">Hẹn giờ</string>
    <string name="found_delivery_driver_title">Tài xế đang trên đường đến</string>
    <string name="discount_text">Giảm</string>
    <string name="percent">%</string>
    <string name="finding_delivery_driver_title">Đang tìm tài xế cho bạn</string>
    <string name="finding_delivery_driver_subtitle">Vui lòng chờ trong giây lát</string>
    <string name="phone_login">Đăng nhập</string>
    <string name="trip_complete">Chuyến đi đã hoàn tất</string>
    <string name="agree">Đồng ý</string>
    <string name="canceled">Đã hủy</string>
    <string name="pending">Đang xử lý</string>
    <string name="note_restaurant">Nhập ghi chú cho nhà hàng</string>
    <string name="product_unit">món</string>
    <string name="weight_unit">kg</string>
    <string name="sender_information">Thông tin người gửi</string>
    <string name="sender_name">Tên người gửi</string>
    <string name="receiver_name">Tên người nhận</string>
    <string name="show_more">Xem thêm</string>
    <string name="short_cut">Rút gọn</string>
    <string name="description">Mô tả</string>
    <string name="order">Đơn hàng</string>
    <string name="cancel_title">Bạn muốn hủy chuyến</string>
    <string name="cancel_reason_option1">Lý do hủy</string>
    <string name="cancel_reason_option2">Bạn đánh giá dịch vụ như thế nào</string>
    <string name="cancel_confirm">Xác nhận hủy</string>
    <string name="allwin_hello">Allwin xin chào</string>
    <string name="trip_details">Thông tin đơn hàng</string>
    <string name="search_title">Tìm kiếm</string>
    <string name="hot_food">Đang hot</string>
    <string name="suggest">Gợi ý phù hợp</string>
    <string name="review_count">(10 đánh giá)</string>
    <string name="canceled_trip">Đã hủy thành công!</string>
    <string name="add_to_fav">Đã thêm vào danh sách yêu thích</string>
    <string name="remove_fav">Đã xóa khỏi danh sách yêu thích</string>
    <string name="email">Email</string>
    <string name="all_win_hello">Xin chào</string>
    <string name="register_all_win">Đăng ký</string>
    <string name="index_description">Chào mừng bạn đến với ứng dụng giao hàng nhanh chóng và tiện lợi! Chúng tôi cam kết mang đến cho bạn dịch vụ giao hàng đáng tin cậy, an toàn và hiệu quả. Hãy để chúng tôi giúp bạn tiết kiệm thời gian và công sức với chỉ vài thao tác đơn giản. Cảm ơn bạn đã chọn chúng tôi, hãy bắt đầu trải nghiệm dịch vụ tuyệt vời ngay bây giờ!</string>
</resources>