<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="a"
            type="ww.smartexpress.app.ui.order.details.OrderDetailsActivity" />
        <variable
            name="vm"
            type="ww.smartexpress.app.ui.order.details.OrderDetailsViewModel" />
        <import type="android.view.View" />

    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:onClick="@{(v)->vm.doBack()}"
                    android:paddingLeft="@dimen/_5ssp"
                    android:paddingRight="@dimen/_20ssp"
                    android:src="@drawable/ic_icon_back">

                </ImageView>

                <TextView
                    android:id="@+id/textView10"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/order_details">

                </TextView>
            </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_70sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_30sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/bg_green_light_elevation"
                    android:layout_marginHorizontal="@dimen/_12sdp"
                    android:padding="@dimen/_12sdp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/title"
                            android:id="@+id/textView23"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_code" />

                        <TextView
                            style="@style/title"
                            android:textAlignment="textStart"
                            android:id="@+id/textView24"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:text="@string/code_trip" />
                    </LinearLayout>

                    <TextView
                        style="@style/order_information_text_medium"
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_time"
                        android:layout_marginTop="@dimen/_5sdp"
                        />
                </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_green_light_elevation"
                android:padding="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp">
                <TextView
                    style="@style/order_information_text_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_address"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_5sdp">
                    <TextView
                        style="@style/order_information_text_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_customer" />

                    <TextView
                        style="@style/order_information_text_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:text="@string/order_phone" />
                </LinearLayout>

                <TextView
                    style="@style/order_information_text_medium"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_from"
                    android:maxLines="2"
                    android:ellipsize="end"
                    />

                <TextView
                    style="@style/trip_information_text_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/order_note"
                    android:textColor="#B6B6B6"
                    />
            </LinearLayout>
                <TextView
                    style="@style/order_information_text_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:text="@string/order" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcFoodOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_food_order"
                    tools:itemCount="5"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="#EEF2F5"></FrameLayout>

                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/order_information_text_bold"
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp">
                    <TextView
                        style="@style/order_information_text_medium"
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tổng tiền hàng thanh toán" />
                    <TextView
                        style="@style/order_information_text_medium"
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/txt1"
                        android:text="(8 món)" />

                    <TextView
                        style="@style/order_information_text_medium"
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:text="@string/price_trip" />
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp">
                    <TextView
                        style="@style/order_information_text_medium"
                        android:id="@+id/txtDiscount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phí di chuyển" />

                    <TextView
                        style="@style/order_information_text_medium"
                        android:id="@+id/txtDiscountPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:text="@string/discount_price" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/linearLayout1"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="#EEF2F5"></FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/order_information_text_bold"
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_cash" />

                    <ImageView
                        android:id="@+id/imageView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="@dimen/_10sdp"
                        app:srcCompat="@drawable/ic_icon_money"/>

                    <TextView
                        style="@style/order_information_text_bold"
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/price_trip" />
                </LinearLayout>
            </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_book_small"
            android:layout_gravity="bottom">
            <Button
                android:onClick="@{(v)->vm.statusOrder()}"
                style = "@style/BookCarButton"
                android:id="@+id/bntNote"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_button_order_details"
                android:enabled="true"
                android:text="@string/order_completed"
                android:textColor="#D60FA958"
                />
        </LinearLayout>
    </FrameLayout>
</layout>