<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.text.TextUtils" />
        <variable
            name="a"
            type="ww.smartexpress.app.ui.input.phone.PhoneActivity" />
        <variable
            name="vm"
            type="ww.smartexpress.app.ui.input.phone.PhoneViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.input.phone.PhoneActivity">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:orientation="vertical">
            <TextView
                style="@style/font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/welcome_winwin"
                android:textColor="@color/black"
                android:textSize="@dimen/_30ssp"/>

            <TextView
                style="@style/font_medium"
                android:textSize="@dimen/_11ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/please_enter_phone"
                android:textColor="@color/grey_text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@drawable/phone_background">

                <com.hbb20.CountryCodePicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    app:ccp_showNameCode="false"
                    app:ccp_defaultPhoneCode="84"
                    app:ccpDialog_showCloseIcon="true"
                    >
                </com.hbb20.CountryCodePicker>

                <FrameLayout
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light">
                </FrameLayout>

                <EditText
                    style="@style/font_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:hint="@string/your_phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:background="@drawable/edittext_background"
                    android:textColor="@color/grey_light"
                    android:maxLength="9"
                    android:onTextChanged="@{vm.onTextChanged}"
                    android:textColorHint="@color/grey_light"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_15sdp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnContinue"
                style="@style/AppButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:enabled="@{!TextUtils.isEmpty(vm.phoneNumber) &amp;&amp; vm.phoneNumber.length() == 9}"
                android:text="@string/welcome_button_continue"
                android:onClick="@{(v)->vm.clickButton()}"/>
        </LinearLayout>

    </RelativeLayout>
</layout>