<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="a"
            type="ww.smartexpress.app.ui.index.IndexActivity" />
        <variable
            name="vm"
            type="ww.smartexpress.app.ui.index.IndexViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.welcome.WelcomeActivity">


        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_100sdp"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentTop="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/index" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:gravity="bottom">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/all_win_hello"
                style="@style/big_title"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:text="@string/index_description"
                style="@style/welcome_subtitle"/>

            <Button
                android:onClick="@{(v)->vm.navigateToLogin()}"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_50sdp"
                android:text="Bắt đầu"
                style="@style/AppButtonStyle"
                android:layout_marginHorizontal="@dimen/_2sdp"
                />
            <Button
                android:visibility="gone"
                android:onClick="@{(v)->vm.navigateToRegister()}"
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_100sdp"
                android:text="@string/register_all_win"
                style="@style/ButtonEnabledStyle"
                android:layout_marginHorizontal="@dimen/_2sdp"
                />
        </LinearLayout>

    </RelativeLayout>
</layout>